--- a/index.html
+++ b/index.html
@@ -6,19 +6,65 @@
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <title>Page Title</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link rel='stylesheet' type='text/css' media='screen' href='css/style.css'>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+        integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Montserrat&family=Qwitcher+Grypen&family=Sacramento&display=swap"
+        rel="stylesheet">
+
+    <title>King level photography</title>
+    <link rel='stylesheet' type='text/css' media='screen' href='css/style.css'>
 
 </head>
 
 <body>
-    <div class="text">
-        <h1>KING LEVEL PHOTOGRAPHY</h1>
-    </div>
-    <div class="logo">
-        <img src="imgs/king.png">
+
+    <div class="container" style="padding-top: 50px;">
+        <div class="row">
+            <div class="col-md-4 col-sm-8" style="padding-bottom: 50px;">
+                <img style="width: 100%; border-radius: 10px; border-radius: 10px; box-shadow: 0px 0px 5px black;"
+                    src="imgs/prof.jpg">
+            </div>
+            <div class="col-md-8 col-sm-12">
+                <h1 style="font-family: 'Sacramento', cursive; text-align: center;">Hello and Welcome!</h1>
+                <p>You are a model in disguise who deserves king-level photography!</p>
+                <p>My name is Jacob and I currently live in Uppsala, Sweden. I was born and raised in Africa. After
+                    moving to a totally different country, I decided to open my eyes to discover many things such as new
+                    people, small and big creatures in nature, the 4 distinct seasons, technology e.t.c.
+                </p>
+                <p>Through this journey I also discovered photography. Photography is such an amazing art that helps us
+                    to capture an amazing moment that otherwise would have only been captured in one's heart. If not
+                    photographically captured, that moment will then be desperately narrated to be painted in the
+                    listener's heart. Photography bypasses all this hustle and downloads that beautiful moment into
+                    other's hearts
+                    within seconds. Isn't that amazing? Good job Louis Le Prince and Johann Zahn.
+                </p>
+                <p>I have been doing photography for a couple of years now and I can say it is one of the few things
+                    that I really enjoy doing today. I was normally a guy who spent a lot of time sitting at home in
+                    front of a computer or just doing some house chores. Yes those unavoidable chores are annoying,
+                    arent they? However, after I started picking up my camera it has forced me to go out in nature, take
+                    long walks, observe and appreciate what is around me. Birds differnt types of insects, dogs are some
+                    of the few things that I have been discovering and photographing. I would have never done all those
+                    things had it not been for my camera. I have also met several good people though it. What an amazing
+                    journey?!
+                </p>
+                <p>
+                    One of the genres of photography that I really like is portrait photography. This type of
+                    photography is so flexible it can be done in a studio, in nature, at home, in the kitchen basically
+                    almost anywhere. I love adding values to people's lives by taking portraits pictures for them and
+                    seeing them happy afterwards.
+                </p>
+                <p>Everyone is a model in disguise who deserves king-level photography!</p>
+                <p>Let's meet up
+                    and take some king-level photos, shall we?</p>
+                <h1 style="font-family: 'Sacramento', cursive; text-align: center; padding-top: 30px;">King level
+                    photography</h1>
+            </div>
+        </div>
     </div>
 
     <script src='main.js'></script>
