--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                 </p>
                 <p>Everyone is a model in disguise who deserves king-level photography!</p>
                 <p>Let's meet up
-                    and take some king-level photos, shall we?</p>
+                    and take some king-level portraits of you, shall we?</p>
                 <h1 style="font-family: 'Sacramento', cursive; text-align: center; padding-top: 30px;">King level
                     photography</h1>
             </div>
