--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                     people, small and big creatures in nature, the 4 distinct seasons, technology e.t.c.
                 </p>
                 <p>Through this journey I also discovered photography. Photography is such an amazing art that helps us
-                    to capture an amazing moment that otherwise would have only been captured in one's heart. If not
+                    to capture moments that otherwise would have only been captured in one's heart. If not
                     photographically captured, that moment will then be desperately narrated to be painted in the
                     listener's heart. Photography bypasses all this hustle and downloads that beautiful moment into
                     other's hearts
