--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
                 </p>
                 <p>Through this journey I also discovered photography. Photography is such an amazing art that helps us
                     to capture moments that otherwise would have only been captured in one's heart. If not
-                    photographically captured, that moment will then be desperately narrated to be painted in the
-                    listener's heart. Photography bypasses all this hustle and downloads that beautiful moment into
+                    photographically captured, they will then be desperately narrated to be painted in the
+                    listener's heart. Photography bypasses all this hustle and downloads these beautiful moments into
                     other's hearts
                     within seconds. Isn't that amazing? Good job Louis Le Prince and Johann Zahn.
                 </p>
