--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                     photographically captured, they will then be desperately narrated to be painted in the
                     listener's heart. Photography bypasses all this hustle and downloads these beautiful moments into
                     other's hearts
-                    within seconds. Isn't that amazing? Good job Louis Le Prince and Johann Zahn.
+                    within seconds. Isn't that amazing? Good job Louis Le Prince and Johann Zahn!
                 </p>
                 <p>I have been doing photography for a couple of years now and I can say it is one of the few things
                     that I really enjoy doing today. I was normally a guy who spent a lot of time sitting at home in
