--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <title>Page Title</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
+    <link rel="icon" type="image/x-icon?v1" href="/imgs/favicon.ico">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
@@ -31,7 +31,7 @@
             </div>
             <div class="col-md-8 col-sm-12">
                 <h1 style="font-family: 'Sacramento', cursive; text-align: center;">Hello and Welcome!</h1>
-                <p>You are a model in disguise who deserves king-level photography!</p>
+                <p>Do you know what you are? You are a model in disguise who deserves king-level photography!</p>
                 <p>My name is Jacob and I currently live in Uppsala, Sweden. I was born and raised in Africa. After
                     moving to a totally different country, I decided to open my eyes to discover many things such as new
                     people, small and big creatures in nature, the 4 distinct seasons, technology e.t.c.
