--- a/index.html
+++ b/index.html
@@ -28,6 +28,11 @@
             <div class="col-md-4 col-sm-8" style="padding-bottom: 50px;">
                 <img style="width: 100%; border-radius: 10px; border-radius: 10px; box-shadow: 0px 0px 5px black;"
                     src="imgs/prof.jpg">
+                <div style="text-align: center; padding-top: 10px;">
+                    <a style="color: inherit; text-decoration: none;" target="_blank"
+                        href="https://www.instagram.com/kinglevelphotography/">
+                        <img src="imgs/instagram.png"> <strong>@kinglevelphotography</strong></a>
+                </div>
             </div>
             <div class="col-md-8 col-sm-12">
                 <h1 style="font-family: 'Sacramento', cursive; text-align: center;">Hello and Welcome!</h1>
@@ -61,6 +66,8 @@
                 <p>Everyone is a model in disguise who deserves king-level photography!</p>
                 <p>Let's meet up
                     and take some king-level portraits of you, shall we?</p>
+                <p>In the mean time follow me on my instagram <a style="color: inherit; text-decoration: none;"
+                        href="https://www.instagram.com/kinglevelphotography/"> @kinglevelphotography.</a></p>
                 <h1 style="font-family: 'Sacramento', cursive; text-align: center; padding-top: 30px;">King level
                     photography</h1>
             </div>
