--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 </p>
                 <p>Through this journey I also discovered photography. Photography is such an amazing art that helps us
                     to capture moments that otherwise would have only been captured in one's heart. If not
-                    photographically captured, they will then be desperately narrated to be painted in the
+                    photographically captured, they would then be desperately narrated to be painted in the
                     listener's heart. Photography bypasses all this hustle and downloads these beautiful moments into
                     other's hearts
                     within seconds. Isn't that amazing? Good job Louis Le Prince and Johann Zahn!
@@ -52,7 +52,8 @@
                     that I really enjoy doing today. I was normally a guy who spent a lot of time sitting at home in
                     front of a computer or just doing some house chores. Yes those unavoidable chores are annoying,
                     arent they? However, after I started picking up my camera it has forced me to go out in nature, take
-                    long walks, observe and appreciate what is around me. Birds differnt types of insects, dogs are some
+                    long walks, observe and appreciate what is around me. Birds, differnt types of insects, dogs are
+                    some
                     of the few things that I have been discovering and photographing. I would have never done all those
                     things had it not been for my camera. I have also met several good people though it. What an amazing
                     journey?!
@@ -66,7 +67,7 @@
                 <p>Everyone is a model in disguise who deserves king-level photography!</p>
                 <p>Let's meet up
                     and take some king-level portraits of you, shall we?</p>
-                <p>In the mean time follow me on my instagram <a style="color: inherit; text-decoration: none;"
+                <p>In the mean time, follow me on my instagram <a style="color: inherit; text-decoration: none;"
                         href="https://www.instagram.com/kinglevelphotography/"> @kinglevelphotography.</a></p>
                 <h1 style="font-family: 'Sacramento', cursive; text-align: center; padding-top: 30px;">King level
                     photography</h1>
