--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
                 <img style="width: 100%; border-radius: 10px; border-radius: 10px; box-shadow: 0px 0px 5px black;"
                     src="imgs/prof.jpg">
                 <div style="text-align: center; padding-top: 10px;">
-                    <a style="color: inherit; text-decoration: none;" target="_blank"
-                        href="https://www.instagram.com/kinglevelphotography/">
+                    <a style="color: inherit; text-decoration: none; font-family: 'Montserrat', sans-serif;"
+                        target="_blank" href="https://www.instagram.com/kinglevelphotography/">
                         <img src="imgs/instagram.png"> <strong>@kinglevelphotography</strong></a>
                 </div>
             </div>
