--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                 <p>Let's meet up
                     and take some king-level portraits of you, shall we?</p>
                 <p>In the mean time, follow me on my instagram <a style="color: inherit; text-decoration: none;"
-                        href="https://www.instagram.com/kinglevelphotography/"> @kinglevelphotography.</a></p>
+                        href="https://www.instagram.com/kinglevelphotography/"> @kinglevelphotography</a></p>
                 <h1 style="font-family: 'Sacramento', cursive; text-align: center; padding-top: 30px;">King level
                     photography</h1>
             </div>
